--- a/main.tex
+++ b/main.tex
@@ -454,9 +454,10 @@ titlepage,numbers=noenddot,%1headlines,
 % ************************************
 % only compile a part of the document
 % ************************************
-\includeonly{ch/1-introduction}
+% \includeonly{ch/1-introduction}
 % \includeonly{ch/2-related-work}
 % \includeonly{ch/3-structure}
+\includeonly{ch/7-discussion}
 
 
 % ********************************************************************
