Tick off another two requests

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -85,6 +85,7 @@
     \acro{EOdds}{equalised odds}
     \acro{EOpp}{equality of opportunity}
     \acro{ERM}{Empirical Risk Minimisation}
+    \acro{GAN}{Generative Adversarial Network}
     \acro{GP}{Gaussian process}
     \acro{INN}{Invertible Neural Network}
     \acro{LR}{Logistic Regression}
