--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2107,3 +2107,14 @@
   title         = {Unpaired Image-to-Image Translation Using Cycle-Consistent Adversarial Networks},
   year          = {2017}
 }
+
+@Article{sattigeri2019fairness,
+  author={Sattigeri, Prasanna and Hoffman, Samuel C. and Chenthamarakshan, Vijil and Varshney, Kush R.},
+  journal={IBM Journal of Research and Development},
+  title={Fairness GAN: Generating datasets with fairness properties using a generative adversarial network},
+  year={2019},
+  volume={63},
+  number={4/5},
+  pages={3:1-3:9},
+  doi={10.1147/JRD.2019.2945519}
+}
