--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2118,3 +2118,14 @@
   pages={3:1-3:9},
   doi={10.1147/JRD.2019.2945519}
 }
+
+@article{platt1999probabilistic,
+  title={Probabilistic outputs for support vector machines and comparisons to regularized likelihood methods},
+  author={Platt, John},
+  journal={Advances in large margin classifiers},
+  volume={10},
+  number={3},
+  pages={61--74},
+  year={1999},
+  publisher={Cambridge, MA}
+}
