--- a/ch/7-discussion.tex
+++ b/ch/7-discussion.tex
@@ -268,19 +268,19 @@ We should always strive to do the best we can.
 % ======== giving my social perspective viewpoint ========
 As AI models (as opposed to mere \ac{ML} models) become more powerful,
 the biases as presented in this thesis will likely become less relevant.
-However, we can argue that generalisations of these biases will still be applicable.
-Spurious correlations in the training data might become less relevant,
+However, we can argue that more abstract forms of these problems will still be present.
+Spurious correlations in the training data might become less relevant --
 because a powerful AI can do its own physics experiments
-and thus will be able to figure out the causal structure of our world on its own.
-However, what is still relevant is the existence of robust, analysable world models,
+and thus will be able to figure out the causal structure of our world on its own --
+but what is still relevant is the existence of robust, analysable world models,
 which it is possible to reason on and do planning with.
-The potential trap here is not that the world model is \emph{wrong},
+The potential trap here is not that the world model is \emph{wrong} per se,
 but that it fails to have a useful structure for other tasks.
 Furthermore, learning about the physical world will not in and of itself be enough to
 become aligned with \emph{human values},
 which is here a catch-all term for
-what morality is or what good is and what wrong is and what good things are,
-the things that we want more of, and what bad things are.
+what morality is or what good is and what wrong is.
+% the things that we want more of, and what bad things are.
 Such questions may appear very different from the issue of label bias
 and objectives like demographic parity,
 but if we take the problem of classical algorithmic fairness to be
